[package]
name = "loadgen"
version = "2.0.0"
authors = ["The Shenango Developers"]
edition = "2021"

[dependencies]
arrayvec = "0.7.2"
byteorder = "1.5"
clap = { version = "4.5.46", features = ["derive"] }
dns-parser = "0.7.1"
itertools = "0.8.0"
libc = "0.2"
rand = "0.7.3"
rand_distr = "0.3.0"
rand_mt = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-binary = "0.5.0"
net2 = "0.2"
mersenne_twister = "1.1.1"
shenango = { path = "../../bindings/rust" }

[profile.release]
debug=false
panic = "abort"

[workspace]
