[package]
name = "synthetic"
version = "0.1.1"
authors = ["The Shenango Developers"]
edition = "2021"

[dependencies]
arrayvec = "0.7.2"
byteorder = "1.5"
clap = "2.32.0"
dns-parser = "0.7.1"
hostname = "0.1.4"
itertools = "0.8.0"
libc = "0.2"
rand = "0.7.3"
rand_distr = "0.3.0"
rand_mt = "3"
serde = "1.0"
net2 = "0.2"
mersenne_twister = "1.1.1"
shenango = { path = "../../bindings/rust" }

[profile.release]
debug=false
panic = "abort"

[workspace]
